--- a/site/app/views/schedule/index.html.erb
+++ b/site/app/views/schedule/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Rozkład jazdy</h1>
-<p>Tutaj będzie rozkład jazdy jak tylko nauczę się, jak go robić :)</p>
-
+<%= link_to "Szukaj według linii", lines_path() %>
+<p>Szukaj według przystanku</p>
+<p>Szukaj według przystanku</p>
