--- a/site/app/assets/stylesheets/application.css
+++ b/site/app/assets/stylesheets/application.css
@@ -18,6 +18,10 @@ a {
     text-decoration: none;
     color: #e9ac55;
 }
+ul { 
+    list-style: none;
+    padding-left: 0;
+}
 html {
     width: 100%;
     height: 100%;
@@ -31,6 +35,7 @@ body {
     margin: auto;
 }
 
+
 #menu ul {
     list-style: none;
     padding-left: 0;
@@ -42,6 +47,10 @@ body {
     display: inline-block;
     padding: 10px;
 }
+.page-header {
+    text-align: center;
+}
+
 .line-list {
     width: 90%;
     margin: auto;
@@ -53,7 +62,12 @@ body {
     box-sizing: border-box;
     font-size: 18px;
     text-align: center;
-    
+}
+.line-routes {
+    display: block;
+    width: 75%;
+    margin: auto;
+    text-align: center;
 }
 .line h3 { 
     font-size: 32px;
