--- a/site/app/views/schedule/index.html.erb
+++ b/site/app/views/schedule/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Rozkład jazdy</h1>
-<%= link_to "Szukaj według linii", lines_path() %>
-<p>Szukaj według przystanku</p>
-<p>Szukaj według przystanku</p>
+<ul>
+  <li><%= link_to "Szukaj według linii", lines_path() %></li>
+  <li><%= link_to "Szukaj według przystanku", stops_path()%></li>
+  <li>Szukaj według przystanku</p></li>
