--- a/site/app/assets/stylesheets/application.css
+++ b/site/app/assets/stylesheets/application.css
@@ -25,13 +25,20 @@ ul {
 html {
     width: 100%;
     height: 100%;
-    background-color: #f5f5dc;
+    background-color: #333388;
     font-family: 'Open Sans';
+    color: #ffeb7e;
+}
+ul { 
+    list-style: none;
+}
+ul { 
+    list-style: none;
 }
 body {
     width: 90%;
-    max-width: 1200px;
-    background-color: #dcdcf5;
+    max-width: 1400px;
+    background-color: #a24141;
     margin: auto;
 }
 
@@ -41,7 +48,6 @@ body {
     padding-left: 0;
     margin: auto;
     text-align: center;
-    background-color:#e9f5dc;
 }
 #menu ul li {
     display: inline-block;
@@ -71,4 +77,7 @@ body {
 }
 .line h3 { 
     font-size: 32px;
+}
+h2 {
+    text-align: center; 
 }
