--- a/site/app/views/lines/index.html.erb
+++ b/site/app/views/lines/index.html.erb
@@ -1,5 +1,6 @@
 
 <h2>Bardzo poważny rozkład autobusów</h2>
+W naszym rozkładzie jest <%= @count %> linii.
 <div class="line-list">
 <% for l in @lines %>
   <div class="line">
