--- a/site/app/views/lines/show.html.erb
+++ b/site/app/views/lines/show.html.erb
@@ -1,5 +1,6 @@
 
-<h2 class="page-header">Bardzo poważny rozkład autobusów</h2>
+<h2 class="page-header">Krakowski rozkład jazdy</h2>
+Na tej linii znajduje się <%= @count %> przystanków. Przejazd trwa średnio <%= @time %> minut. 
   <div class="line-routes">
   <h3><a href="/lines/<%= @line["id"] %>"><%= @line["number"] %></a></h3>
     Trasa:
