--- a/site/app/views/difficulties/show.html.erb
+++ b/site/app/views/difficulties/show.html.erb
@@ -1,4 +1,4 @@
-<h2>Awaria o numerze <%= @difficulty["id"] %></h2>
+<h2>Awaria: <%= @difficulty["title"] %></h2>
 <strong>Rodzaj problemu:</strong>
 <p> <%= @difficulty["difficulty_name"] %> </p>
 <strong>Opis awarii:</strong>
