--- a/site/app/views/drivers/index.html.erb
+++ b/site/app/views/drivers/index.html.erb
@@ -1,8 +1,18 @@
-<p>Poniżej znajdą Państwo naszych utalentowanych kierowców!</p>
+<p>Poniżej znajdą Państwo naszych <%= @count %> utalentowanych kierowców z uprawnieniami!</p>
 <div class="driver">
 <% @drivers.each do |driver| %>
   <div><strong>Imię i nazwisko: </strong> <%= driver["name"] %></div>
   <div><strong>Posiadanie uprawnienia: </strong> <%= driver["full_title"] ? driver["full_title"] : "Brak uprawnień" %></div>
+  <div><strong>Wiek: </strong> <%= driver["age"] %></div>
   
 <% end %>
+
+<h4>Znajdź kierowcę</h4>
+<%= form_tag "/drivers/search/", :method => 'get' do %> 
+  <div>Nazwisko kierowcy:</div> <%= text_field_tag :name %>
+  <div>Minimalny wiek kierowcy:</div> <%= text_field_tag :age_min %>
+  <div>Maksymalny wiek kierowcy:</div> <%= text_field_tag :age_max %>
+  <%= submit_tag %>
+<% end %>
 </div>
+
