--- a/site/app/views/schedule/index.html.erb
+++ b/site/app/views/schedule/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Rozkład jazdy</h1>
+Nasze autobusy i tramwaje zatrzymują się na przystankach <%= @count %> razy.
 <ul>
   <li><%= link_to "Szukaj według linii", lines_path() %></li>
   <li><%= link_to "Szukaj według przystanku", stops_path()%></li>
