--- a/site/app/views/schedule/index.html.erb
+++ b/site/app/views/schedule/index.html.erb
@@ -3,4 +3,5 @@ Nasze autobusy i tramwaje zatrzymują się na przystankach <%= @count %> razy.
 <ul>
   <li><%= link_to "Szukaj według linii", lines_path() %></li>
   <li><%= link_to "Szukaj według przystanku", stops_path()%></li>
-  <li>Szukaj według przystanku</p></li>
+  <li><a href="/schedule/advanced/">Wyszukiwanie zaawansowane</a></li>
+  <li><a href="/departures/pickline/">Dodaj przejazdy do systemu</a></li>
