--- a/site/app/assets/stylesheets/application.css
+++ b/site/app/assets/stylesheets/application.css
@@ -53,6 +53,13 @@ body {
     display: inline-block;
     padding: 10px;
 }
+
+
+#content {
+    width: 90%;
+    margin: auto;
+}
+
 .page-header {
     text-align: center;
 }
@@ -80,4 +87,11 @@ body {
 }
 h2 {
     text-align: center; 
+}
+
+footer {
+    text-align: center;
+    padding: 10px;
+    background-color: #5588dd;
+    margin-top: 20px;
 }
